syntax = "proto3";

package ozon.dev.homework.api;
option go_package = "gitlab.ozon.dev/igor.benko.1991/homework/pkg/api;api";

import "google/api/annotations.proto";

service PersonService {
    rpc CreatePerson(CreatePersonRequest) returns (CreatePersonResponse) {
        option (google.api.http) = {
            post: "/v1/persons"
            body: "*"
        };
    }
    rpc UpdatePerson(UpdatePersonRequest) returns (UpdatePersonResponse) {
        option (google.api.http) = {
            put: "/v1/persons"
            body: "*"
        };
    }
    rpc DeletePerson(DeletePersonRequest) returns (DeletePersonResponse) {
        option (google.api.http) = {
            delete: "/v1/persons/{id}"
        };
    }
    rpc GetPerson(GetPersonRequest) returns (GetPersonResponse) {
        option (google.api.http) = {
            get: "/v1/persons/{id}"
        };
    }
    rpc ListPerson(ListPersonRequest) returns (ListPersonResponse) {
        option (google.api.http) = {
            get: "/v1/persons"
        };
    }
}

// Entity
message Person {
    uint64 id = 1;
    string last_name = 2;
    string first_name = 3;
}

// Create person
message CreatePersonRequest {
    string last_name = 1;
    string first_name = 2;
}

message CreatePersonResponse {
    uint64 id = 1;
}

// Update person
message UpdatePersonRequest {
    uint64 id = 1;
    string last_name = 2;
    string first_name = 3;
}

message UpdatePersonResponse {
}

// Delete person
message DeletePersonRequest {
    uint64 id = 1;
}

message DeletePersonResponse {
}

// Get person
message GetPersonRequest {
    uint64 id = 1;
}

message GetPersonResponse {
    Person person = 1;
}

// List persons
message ListPersonRequest {
}

message ListPersonResponse {
    repeated Person persons = 1;
}